# Testes

./: pyproject.toml
calculadora_margem/: assinador.py  interface.py  main.py
